add project tree-structure

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MIMIHO</title>
+  <title>Restaurant</title>
 
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
@@ -20,21 +20,13 @@
   <main>
     <!-- Hero -->
     <section class="hero">
-      <include src="./partials/pages/main/hero.html"></include>
+      <include src="./partials/pages/restaurant/hero.html"></include>
       <include src="./partials/social.html"></include>
     </section>
 
+    <!-- About our kitchen -->
 
-    <!-- About our restaurant -->
-
-    <!-- Details of our restaurant -->
-
-    <!-- About our hotel -->
-
-    <!-- Details of our hotel -->
-
-    <!-- Contacts -->
-
+    <!-- Restaurant menu -->
 
   </main>
   <!--  Footer -->
