--- a/src/hotel.html
+++ b/src/hotel.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MIMIHO</title>
+  <title>Hotel</title>
 
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
@@ -20,21 +20,15 @@
   <main>
     <!-- Hero -->
     <section class="hero">
-      <include src="./partials/pages/main/hero.html"></include>
+      <include src="./partials/pages/hotel/hero.html"></include>
       <include src="./partials/social.html"></include>
     </section>
 
+    <!-- 1 room luxe for 2 adult -->
 
-    <!-- About our restaurant -->
+    <!-- 1 room for 3 adult -->
 
-    <!-- Details of our restaurant -->
-
-    <!-- About our hotel -->
-
-    <!-- Details of our hotel -->
-
-    <!-- Contacts -->
-
+    <!-- 1 room for 2 adult -->
 
   </main>
   <!--  Footer -->
