add site structure according to techtask

--- a/src/index.html
+++ b/src/index.html
@@ -29,20 +29,16 @@
         <include src="./partials/layouts/social.html"></include>
       </div>
     </section>
-
-
-
     <!-- About our restaurant -->
-
+    <include src="./partials/pages/main/about-restaurant.html"></include>
     <!-- Details of our restaurant -->
-
+    <include src="./partials/pages/main/details-restaurant.html"></include>
     <!-- About our hotel -->
-
+    <include src="./partials/pages/main/about-hotel.html"></include>
     <!-- Details of our hotel -->
-
+    <include src="./partials/pages/main/details-hotel.html"></include>
     <!-- Contacts -->
-
-
+    <include src="./partials/pages/main/contacts.html"></include>
   </main>
   <!--  Footer -->
   <include src="./partials/layouts/footer.html"></include>
