--- a/src/room-double.html
+++ b/src/room-double.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Restaurant</title>
+  <title>Room</title>
 
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
@@ -23,16 +23,14 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero hero--restaurant container">
-      <include src="./partials/pages/restaurant/hero.html"></include>
+    <section class="hero hero--main container">
+      <include src="./partials/pages/room-double/hero.html"></include>
       <div class="hero__social">
         <include src="./partials/layouts/social.html"></include>
       </div>
     </section>
-    <!-- About our kitchen -->
-    <include src="./partials/pages/restaurant/about-kitchen.html"></include>
-    <!-- Restaurant menu -->
-    <include src="./partials/pages/restaurant/menu.html"></include>
+    <!-- Amenities -->
+    <include src="./partials/pages/room-double/amenities.html"></include>
   </main>
   <!--  Footer -->
   <include src="./partials/layouts/footer.html"></include>
