--- a/src/hotel.html
+++ b/src/hotel.html
@@ -29,13 +29,12 @@
         <include src="./partials/layouts/social.html"></include>
       </div>
     </section>
-
-    <!-- 1 room luxe for 2 adult -->
-
-    <!-- 1 room for 3 adult -->
-
     <!-- 1 room for 2 adult -->
-
+    <include src="./partials/pages/hotel/double.html"></include>
+    <!-- 1 room luxe for 2 adult -->
+    <include src="./partials/pages/hotel/doublelux.html"></include>
+    <!-- 1 room for 3 adult -->
+    <include src="./partials/pages/hotel/triple.html"></include>
   </main>
   <!--  Footer -->
   <include src="./partials/layouts/footer.html"></include>
