add amenities section, fix gradient, fix background

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
-      <div class="container hero__container hero__container--main">
+    <section class="hero hero--main">
+      <div class="container hero__container">
         <include src="./partials/pages/main/hero.html"></include>
         <div class="hero__social">
           <include src="./partials/layouts/social.html"></include>
