--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -25,8 +25,8 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
-      <div class="container hero__container hero__container--restaurant">
+    <section class="hero hero--restaurant">
+      <div class="container hero__container">
         <include src="./partials/pages/restaurant/hero.html"></include>
         <div class="hero__social">
           <include src="./partials/layouts/social.html"></include>
