--- a/src/room-doublelux.html
+++ b/src/room-doublelux.html
@@ -25,7 +25,7 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
+    <section class="hero hero--doublelux">
       <div class="container hero__container hero__container--doublelux">
         <include src="./partials/pages/room-doublelux/hero.html"></include>
         <div class="hero__social">
