--- a/src/hotel.html
+++ b/src/hotel.html
@@ -25,8 +25,8 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
-      <div class="container hero__container hero__container--hotel">
+    <section class="hero hero--hotel">
+      <div class="container hero__container">
         <include src="./partials/pages/hotel/hero.html"></include>
         <div class="hero__social">
           <include src="./partials/layouts/social.html"></include>
