--- a/src/room-double.html
+++ b/src/room-double.html
@@ -25,7 +25,7 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
+    <section class="hero hero--double">
       <div class="container hero__container hero__container--double">
         <include src="./partials/pages/room-double/hero.html"></include>
         <div class="hero__social">
