--- a/src/room-triple.html
+++ b/src/room-triple.html
@@ -25,7 +25,7 @@
   <!-- main -->
   <main>
     <!-- Hero -->
-    <section class="hero">
+    <section class="hero hero--triple">
       <div class="container hero__container hero__container--triple">
         <include src="./partials/pages/room-triple/hero.html"></include>
         <div class="hero__social">
